Adding Trajectory Plot

--- a/src/description/11.md
+++ b/src/description/11.md
@@ -1,4 +1,4 @@
-Relationship,Geospatial Data
+Relationship,Geospatial Data,Movement
 /img/cardImg/11.png
 /img/examples/11/armstrade.png,/img/examples/11/usa-air-routes-google-earth.JPG,/img/examples/11/deckgl.png
 Source: https://armsglobe.chromeexperiments.com/,Source: http://www.barnabu.co.uk/google-earth-complete-us-air-routes/,Source: https://uber.github.io/deck.gl/#/examples/core-layers/arc-layer
@@ -43,4 +43,4 @@ __Cons__
 
 ## Similar Charts/Graphs
 
-### [3D Graph Drawing](./9) [3D Bar Chart on Map](./10)
+### [3D Graph Drawing](./9) [3D Bar Chart on Map](./10) [Trajectory Plot](./15)
