--- a/src/description/6.md
+++ b/src/description/6.md
@@ -1,4 +1,4 @@
-Correlation,Distribution,Identifying Outliers
+Correlation,Distribution,Identifying Outliers,Clustering
 /img/cardImg/06.png
 /img/examples/06/ykkslsl.jpeg,/img/examples/06/9opOV.gif,/img/examples/06/threedscatter2.jpg,/img/examples/06/threedscatter2.png,/img/examples/06/Skærmbillede-2017-09-04-kl.-17.06.45.png
 Source: http://rgraphgallery.blogspot.fi/2013/04/rg-3d-scatter-plots-with-vertical-lines.html,Source: https://i.stack.imgur.com/9opOV.gif,Source:https://se.mathworks.com/matlabcentral/fileexchange/35288-matlab-plot-gallery-scatter-plot-3d?focused=6793187&tab=example,Source: http://www.doka.ch/Excel3Dscatterplot.htm,Source: http://www.advsofteng.com/gallery_3dscatter.html,Source: http://www.doka.ch/Excel3Dscatterplot.html
