--- a/src/description/12.md
+++ b/src/description/12.md
@@ -1,4 +1,4 @@
-Patterns,Comparison,Trend Over Time
+Patterns,Comparison,Trends
 /img/cardImg/12.png
 /img/examples/12/download.jpeg,/img/examples/12/sys6wtf.gif,/img/examples/12/Choe_as_3D_Waterfall_500px.gif,/img/examples/12/Waterfall-plot-of-r-a-e-k-of-the-4-4-silicene-overlayer-on-Ag111-at-11-k.png
 Source: https://www.originlab.com/doc/Tutorials/2D-Waterfall,Source: http://www.speakerbuilding.com/content/1009/page_7.php,Source: https://www.originlab.com/www/products/GraphGallery.aspx?GID=86,Source: https://www.researchgate.net/publication/271603202_Electronic_Structure_of_the_4_4_Silicene_Monolayer_On_Semi-Infinite_Ag111/figures?lo=1&utm_source=google&utm_medium=organic
