--- a/src/description/8.md
+++ b/src/description/8.md
@@ -1,4 +1,4 @@
-Patterns,Trends Over Time
+Patterns,Trend Over Time
 /img/cardImg/08.png
 /img/examples/08/SplinePath3DPoints.png,/img/examples/08/x-y-z-scatter-plot-8.png
 Source: https://ilnumerics.net/Examples/Spline_path_through_3D_points/SplinePath3DPoints.png,Source: https://www.unistat.com/guide/x-y-z-scatter-plot/
