--- a/src/description/1.md
+++ b/src/description/1.md
@@ -10,7 +10,7 @@ Bar charts are one of the most common forms of visualization because they are ve
 
 _3D bar charts are more informed if the two categories on the X and Z axes are related for example age group and race or day of the week and time of the day._ 
 
-## Input
+## What your data should look like to use 3D Bar Chart 
 
 | | Category 1 | Category 2 | Category 3 | Category 4
 | ------------- |:-------------:| :-----:| :-----:| :-----:|
@@ -22,7 +22,7 @@ Category D | 52 | 56 | 60 | 64
 ## Pros and Cons of 3D Bar Chart
 
 __Pros__
-* Really good for communication
+* Good for communication
 * Gives an overview of the data
 * Easy to understand due to widespread use in business and the media
 
