--- a/src/description/10.md
+++ b/src/description/10.md
@@ -8,7 +8,7 @@ Bar Chart on Map is simply a combination of a bar chart and a map; with the bars
 
 If the map used is planar projection then the map should be placed on the __xz plane__ i.e. the floor and the bars should rise on the __y axes__.
 
-## Input
+## What your data should look like to use 3D Bar Chart on Map
 
 Location / Country | Value 
 :-------------:| :-----:|  
