--- a/src/description/11.md
+++ b/src/description/11.md
@@ -8,7 +8,7 @@ Flow Map is simply a combination of a flow diagram or Sankey diagram and a map w
 
 If the map used is planar projection then the map should be placed on the __xz plane__.
 
-## Input
+## What your data should look like to use 3D Flow Map
 
 Source | Destination 
 :-------------:| :-----:|  
