--- a/src/description/12.md
+++ b/src/description/12.md
@@ -8,7 +8,7 @@ Waterfall Plot is a three-dimensional plot in which multiple curves of data are 
 
 _This plot is most commonly and frequently used in spectral and frequency analysis._
 
-## Input
+## What your data should look like to use Waterfall Plot
 
 Serial No. | x1 | x2 | x3 | x4
 | :-------------: |:-------------:| :-----:| :-----:| :-----:|
