--- a/src/description/15.md
+++ b/src/description/15.md
@@ -8,7 +8,7 @@ Trajectory Plot visualizes the motion of an object in three-dimensional space. I
 
 An advantage of using this is VR for sports is that we can visualize the actual size of the feild as we have no limitation of space in VR. This helps us visualize the actual movement of the object rather than a scaled down version which can affect the interpretation of the visualization. If the sport field is used then the it should be placed on the __xz plane__.
 
-## Input
+## What your data should look like to use Trajectory Plot
 
 | | Point 1 | Point 2 | Point 3 | Point 4
 | ------------- |:-------------:| :-----:| :-----:| :-----:|
