--- a/src/description/2.md
+++ b/src/description/2.md
@@ -6,7 +6,7 @@ This is a 3D Stacked Bars plot with bar shape set to Cylinder. The plot tracks e
 
 Stacked Bar charts are a variation of bar charts; where bars that represent different data type are stacked on top of each other. The height of the resulting bar shows the combined result of the groups.  _Stacked bar graphs present the information in the same sequence on each bar._
 
-## Input
+## What your data should look like to use 3D Stacked Bar Chart 
 
 | | Category 1 | Category 2 | Category 3 | Category 4
 | ------------- |:-------------:| :-----:| :-----:| :-----:|
@@ -15,7 +15,7 @@ Category B | `i:`20,`j:`20 | `i:`24,`j:`24 | `i:`28,`j:`28 | `i:`32,`j:`32
 Category C | `i:`36,`j:`36 | `i:`40,`j:`40 | `i:`44,`j:`44 | `i:`48,`j:`48
 Category D | `i:`52,`j:`52 | `i:`56,`j:`56 | `i:`60,`j:`60 | `i:`64,`j:`64
 
-## Pros and Cons of 3D Bar Chart
+## Pros and Cons of 3D Stacked Bar Chart
 
 __Pros__
 * Gives an overview of the data
