--- a/src/description/3.md
+++ b/src/description/3.md
@@ -8,7 +8,7 @@ Source: https://se.mathworks.com/help/matlab/ref/surf.html,Source: http://pgfplo
 
 These plots are useful for viewing the relationship between a dependent and two independent variables. They mostly used in engineering to plot three-dimensional relationship g(x, y, z). Another application can be in education to help students visualize three-dimensional geometry.
 
-## Input
+## What your data should look like to use 3D Serface Plot
 
  x | y | z | 
 :-------------:| :-----:| :-----:| 
@@ -24,7 +24,7 @@ The construction of surface plot require domains for two independent variables a
 ## Pros and Cons of 3D Surface Plot
 
 __Pros__
-* Really good viewing the relationship between a dependent and two independent variables
+* Good viewing the relationship between a dependent and two independent variables
 * Can be used to peak and valleys in the function
 
 __Cons__
