--- a/src/description/4.md
+++ b/src/description/4.md
@@ -8,7 +8,7 @@ Source: https://se.mathworks.com/help/matlab/ref/contour3.html,Source: http://ww
 
 This can be used to plot a motion of an object in three-dimensional space or can also be used to visualize pathlines or streamline in fluid dynamics like the flow of wind around a plane wing. Multiple lines can be grouped with each other to be compared to one another.
 
-## Input
+## What your Data should Look Like to use 3D Contour
 
 Serial No. | x | y | z | 
 :-------------:| :-----:| :-----:|:-----:| 
