--- a/src/description/5.md
+++ b/src/description/5.md
@@ -8,7 +8,7 @@ A point cloud is a set of points in a coordinate system; hence 3D point cloud is
 
 Traditionally point cloud in a 3D coordinate system has been used to visualize the external surface of an object, but in data visualization, it can also be used to visualize point or position of one or many objects in space. One application of this visualization in sports is in bat-and-ball games like cricket, baseball, tennis or badminton; where point cloud can be used to visualize the position where the ball has been hit by the bat.
 
-## Input
+## What your data should look like to use 3D Point Cloud
 
  x | y | z | 
 :-------------:| :-----:| :-----:| 
