--- a/src/description/6.md
+++ b/src/description/6.md
@@ -8,7 +8,7 @@ Scatter plots are plots or diagrams which visualizes quantitative data as sets o
 
 Scatter plots are one of the most common forms of visualization, and they are widely used in scientific visualization. They are mostly used to find correlations, clusters, patterns, outliers, and trends in the dataset. 
 
-## Input
+## What your data should look like to use 3D Scatter Plot
 
  x | y | z | 
 :-------------:| :-----:| :-----:| 
