--- a/src/description/7.md
+++ b/src/description/7.md
@@ -6,7 +6,7 @@ Source: http://help.infragistics.com/Help/Doc/WinForms/2011.2/CLR2.0/html/Chart_
 
 Bubble chart is a variation of scatter plot; bubble chart is a scatter plot with point size representing a quantitative data type and color representing a categorical data type. 3D bubble chart generally visualizes four-dimensional data; although additional data can be visualized using colours. _2D bubble charts gained popularity after Hans Rosling's TED 2006 talk on human development trends._
 
-## Input
+## What your data should look like to use 3D Bubble Chart 
 
  x | y | z | r
 :-------------:| :-----:| :-----:| :-----:| 
