--- a/src/description/9.md
+++ b/src/description/9.md
@@ -6,7 +6,7 @@ Source: https://github.com/vasturiano/d3-force-3d,Source: https://www.youtube.co
 
 In graph theory in mathematics, a graph is a structure formed by vertices and edges; where vertices represent a set of objects and edges represent the relationship between these objects. Graph Drawings are mostly used to visualize relationships (e.g. social networks). Visualizing a graph can help identify hidden relationships and interesting patterns.
 
-## Input
+## What your data should look like to use 3D Graph Drawing 
 
 | | Node 1 | Node 2 | Node 3 | Node 4
 :-------------:| :-----:| :-----:|:-----:| :-----:| 
