--- a/src/description/8.md
+++ b/src/description/8.md
@@ -13,7 +13,7 @@ Connected scatterplots can contain two particularly interesting features: __L-sh
 
 _A connected scatterplot can only be drawn when the time series are sampled at the same rate; for example, all the time series should be sampled yearly._
 
-## Input
+## What your data should look like to use 3D Connected Scatterplot
 
 Year / Time | x | y | z | 
 :-------------:| :-----:| :-----:|:-----:| 
