--- a/src/description/1.md
+++ b/src/description/1.md
@@ -4,7 +4,7 @@ Comparison,Magnitude,Distribution,Pattern
 Source: https://i.stack.imgur.com/BumCd.png,Source: http://www.terrapatria.org/p/2018/02/plotting-3d-bar-graph-in-matlab-or-excel-stack-overflow-with-regard-to-3d-bar-graph-excel.png,Source: https://se.mathworks.com/matlabcentral/fileexchange/35274-matlab-plot-gallery-bar-graph-3d?focused=6793108&tab=example
 # 3D Bar Chart
 
-Bar charts are used to display and compare the quantitative data type for different discrete categories of data. 3D bar chart uses cuboids or cylinders as bars to visualize the data, with the height of each bar proportional to the bars’ represented values. _For the visualization to be more readable; the categories should be represented on the X and Z axes and the value should be represented on the Y axes._
+Bar charts are used to display and compare the quantitative data for different discrete categories of data. 3D bar chart uses cuboids or cylinders as bars to visualize the data, with the height of each bar proportional to the bars’ represented values. _For the visualization to be more readable; the categories should be represented on the X and Z axes and the value should be represented on the Y axes._
 
 Bar charts are one of the most common forms of visualization because they are very easy to interpret. They are mostly used to compare values between discrete categories and to find the frequency distribution.
 
